--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Project P1: Build a Portfolio Site</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -14,7 +14,7 @@
 
     <header class="header">
         <img class="header__logo" src="img/abstract_multicolor_colors_desktop_1440x900_hd-wallpaper-1541901.jpg" alt="logo image"></img>
-		<h1 class="header__title">Portfolio: Amit Man Singh</h1>
+			<h1 class="header__title">Portfolio: Amit Man Singh</h1>
         <p class="header__subtitle">Front-End Web Developer</p>
 <!--navigation when collapsed-->
         <a id="menu" class="header__menu">
